# nostr-rust-forum

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLOSEOUT-SECURITY-AUDIT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MAINTAINERS.md  README.md  SECURITY.md  SETUP.md  deny.toml  e2e-forum-test.mjs  e2e-smoke-test.mjs  forum.example.toml
crates/auth-worker/: Cargo.toml  wrangler.toml
crates/auth-worker/migrations/: 0003_username_reservations.sql
crates/auth-worker/src/: admin.rs  auth.rs  http.rs  lib.rs  moderation.rs  rate_limit.rs  username.rs  webauthn.rs  welcome.rs  wot.rs
crates/forum-client/: Cargo.toml  Trunk.toml  design-tokens.css  index.html  style.css  sw.js
crates/forum-client/js/: webgpu-particles.js
crates/forum-client/src/: app.rs  main.rs  relay.rs
crates/forum-client/src/admin/: audit_log.rs  calendar.rs  channel_form.rs  mod.rs  overview.rs  relay_settings.rs  reports.rs  section_requests.rs  settings.rs  stats.rs  user_table.rs
crates/forum-client/src/auth/: http.rs  mod.rs  nip07.rs  nip98.rs  passkey.rs  session.rs  webauthn.rs
crates/forum-client/src/components/: access_denied.rs  activity_graph.rs  admin_checklist.rs  badge_display.rs  board_stats.rs  bookmarks_modal.rs  breadcrumb.rs  category_card.rs  channel_card.rs  channel_stats.rs  create_event_modal.rs  draft_indicator.rs  event_card.rs  export_modal.rs  global_search.rs  hidden_message.rs  (+29 more)
crates/nostr-bbs-ascii/: Cargo.toml
crates/nostr-bbs-ascii/src/: lib.rs
crates/nostr-bbs-auth-worker/: Cargo.toml  wrangler.toml
crates/nostr-bbs-auth-worker/migrations/: 0003_username_reservations.sql  002_mod_wot_invites_welcome.sql
crates/nostr-bbs-auth-worker/src/: admin.rs  admins.rs  auth.rs  crypto.rs  delegation.rs  devices.rs  did.rs  governance_api.rs  http.rs  invites.rs  lib.rs  moderation.rs  pod.rs  schema.rs  username.rs  webauthn.rs  welcome.rs  wot.rs  zone_approval.rs
crates/nostr-bbs-bbs-client/: Cargo.toml  README.md  Trunk.toml  bbs-sw.js  index.html  manifest.webmanifest
crates/nostr-bbs-bbs-client/assets/: bbs.css
crates/nostr-bbs-bbs-client/src/: agent.rs  app.rs  ascii_img.rs  chrome.rs  config.rs  dm.rs  identity.rs  lib.rs  main.rs  menu.rs  nip07.rs  notifications.rs  passkey.rs  pod.rs  pwa.rs  relay.rs  screens.rs  search.rs  search_core.rs  signer.rs  theme.rs  upload.rs
crates/nostr-bbs-config/: Cargo.toml  README.md
crates/nostr-bbs-config/src/: lib.rs  loader.rs  schema.rs  validate.rs
crates/nostr-bbs-core/: CHANGELOG.md  Cargo.toml
crates/nostr-bbs-core/benches/: bench_events.rs  bench_keys.rs  bench_nip44.rs
crates/nostr-bbs-core/src/: admin_shared.rs  boot_profile.rs  calendar.rs  cors.rs  d1_helpers.rs  deletion.rs  did.rs  event.rs  gift_wrap.rs  governance.rs  groups.rs  keys.rs  lib.rs  moderation_events.rs  nip04.rs  nip19.rs  nip26.rs  nip44.rs  nip90.rs  nip98.rs  signer.rs  types.rs  wasm_bridge.rs
crates/nostr-bbs-core/tests/: e2e_auth_flow.rs  fixtures  nip04_proptests.rs  nip19_proptests.proptest-regressions  nip19_proptests.rs  nip19_tests.rs  nip26_tests.rs
crates/nostr-bbs-forum-client/: Cargo.toml  Trunk.toml  index.html  manifest.webmanifest  style.css  sw.js  tailwind.config.js  tailwind.css
crates/nostr-bbs-forum-client/js/: webgpu-particles.js
crates/nostr-bbs-forum-client/src/: app.rs  main.rs  relay.rs
crates/nostr-bbs-mesh/: Cargo.toml  README.md
crates/nostr-bbs-mesh/src/: lib.rs
crates/nostr-bbs-pod-worker/: Cargo.toml  wrangler.toml
crates/nostr-bbs-pod-worker/contexts/: acl.jsonld  did-v1.jsonld  foaf.jsonld  solid.jsonld
crates/nostr-bbs-pod-worker/src/: acl.rs  auth.rs  container.rs  content_negotiation.rs  contexts.rs  did.rs  export.rs  git.rs  key_provisioning.rs  lib.rs  nip05_endpoint.rs  notifications.rs  patch.rs  payments.rs  pod_git_anchor.rs  provision.rs  quota.rs  remote_storage.rs  webid.rs
crates/nostr-bbs-pod-worker/tests/: wac_proptests.rs
crates/nostr-bbs-preview-worker/: Cargo.toml  wrangler.toml
crates/nostr-bbs-preview-worker/src/: lib.rs  oembed.rs  rate_limit.rs  ssrf.rs
crates/nostr-bbs-rate-limit/: Cargo.toml
crates/nostr-bbs-rate-limit/src/: lib.rs  replay.rs
crates/nostr-bbs-relay-worker/: Cargo.toml  wrangler.toml
crates/nostr-bbs-relay-worker/migrations/: 0002_governance.sql  0003_pubkey_aliases.sql
crates/nostr-bbs-relay-worker/src/: agent_disclosure.rs  audit.rs  auth.rs  cron.rs  lib.rs  moderation.rs  nip11.rs  profiles.rs  trust.rs  user_admin.rs  whitelist.rs  zone_config.rs
crates/nostr-bbs-relay-worker/tests/: moderation_tests.rs  nip_handlers_tests.rs  whitelist_tests.rs
crates/nostr-bbs-search-worker/: Cargo.toml  wrangler.toml
crates/nostr-bbs-search-worker/src/: auth.rs  embed.rs  lib.rs  store.rs
crates/nostr-bbs-setup-skill/: Cargo.toml  README.md
crates/nostr-bbs-setup-skill/src/: lib.rs
crates/nostr-bbs-upstream-canary/: Cargo.toml
crates/nostr-bbs-upstream-canary/src/: lib.rs
crates/nostr-core/: Cargo.toml  wasm-test.html
crates/nostr-core/benches/: bench_events.rs  bench_keys.rs  bench_nip44.rs
crates/nostr-core/src/: calendar.rs  deletion.rs  gift_wrap.rs  groups.rs  lib.rs  moderation_events.rs  nip26.rs  nip44.rs  nip90.rs  nip98.rs
crates/nostr-core/tests/: nip04_proptests.rs  nip19_proptests.rs  nip19_tests.rs  nip26_tests.rs
crates/pod-worker/: Cargo.toml  wrangler.toml
crates/pod-worker/src/: acl.rs  auth.rs  conditional.rs  content_negotiation.rs  lib.rs  patch.rs  payments.rs  provision.rs  quota.rs  remote_storage.rs  webid.rs
crates/preview-worker/: Cargo.toml  wrangler.toml
crates/preview-worker/src/: lib.rs  oembed.rs  parse.rs  rate_limit.rs  ssrf.rs
crates/relay-worker/: Cargo.toml  wrangler.toml
crates/relay-worker/migrations/: 0001_profiles.sql
crates/relay-worker/src/: audit.rs  auth.rs  lib.rs  moderation.rs  nip11.rs  profiles.rs  trust.rs  whitelist.rs
crates/relay-worker/tests/: audit_tests.rs  nip_handlers_tests.rs  whitelist_tests.rs
crates/search-worker/: Cargo.toml  wrangler.toml
crates/search-worker/src/: auth.rs  embed.rs  lib.rs  rate_limit.rs  store.rs
(+276 files in other folders)
