[workspace]
resolver = "2"
members = [
    # Foundation — pure Nostr protocol primitives.
    "crates/nostr-bbs-core",

    # Configuration + federation kit (PRD-012 X1, ADR-073, ADR-085).
    "crates/nostr-bbs-config",
    "crates/nostr-bbs-mesh",

    # Provider-abstracted operator-onboarding skill (ADR-079).
    "crates/nostr-bbs-setup-skill",

    # Shared Cloudflare Worker utilities.
    "crates/nostr-bbs-rate-limit",

    # Cloudflare Worker reference implementations.
    "crates/nostr-bbs-auth-worker",
    "crates/nostr-bbs-pod-worker",
    "crates/nostr-bbs-preview-worker",
    "crates/nostr-bbs-relay-worker",
    "crates/nostr-bbs-search-worker",

    # Leptos CSR forum client.
    "crates/nostr-bbs-forum-client",

    # F26 / ADR-076 D5 — upstream `nostr` crate WASM/CF Workers compatibility
    # canary. Validates that the absorption path (Shape A) is viable on the
    # forum's specific build matrix before any nostr-core module deletion.
    "crates/nostr-bbs-upstream-canary",
]

[workspace.package]
license = "AGPL-3.0-only"
repository = "https://github.com/DreamLab-AI/nostr-rust-forum"
edition = "2021"
rust-version = "1.85"

[workspace.metadata.ci]
# Crates verified to compile for wasm32-unknown-unknown without extra system
# headers. Expand this list as secp256k1-sys cross-compile is resolved upstream.
wasm-check-packages = ["nostr-bbs-config", "nostr-bbs-preview-worker"]

[workspace.dependencies]
# Nostr protocol (0.44.x — alpha, pinned to minor).
# Phase 5 Stage 2B (ADR-076/078): activate the NIP feature flags for the
# absorption targets. `std` is on by default; the explicit feature list here
# enables nip04 (legacy DM), nip44 (encrypted DM v2), nip59 (gift wrap),
# nip90 (DVM), and nip98 (HTTP auth) — the rust-nostr modules that replace
# hand-rolled crypto in `nostr-bbs-core`.
nostr = { version = "0.44", features = ["nip04", "nip44", "nip59", "nip98"] }

# UI framework (0.7.x — stay on 0.7 track, 0.8 is breaking)
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
leptos_meta = "0.7"

# Cloudflare Workers
# Bumped 0.7 → 0.8 (2026-04-20): worker-build latest requires worker@0.8.1+.
# Breaking changes audited: Storage.get returns Result<Option<T>> (code was
# already Option-aware), default out-dir pkg→build (wrangler.toml already uses
# build/), DurableObject import (we use `use worker::*` glob which still brings
# it in). Safe to upgrade.
worker = "0.8"

# WebAuthn with PRF support
passkey-types = "0.3"

# Cryptography (NCC audited, pinned to latest patch)
k256 = { version = "0.13.4", features = ["schnorr", "ecdh"] }
p256 = { version = "0.13", features = ["ecdsa"] }
chacha20poly1305 = "0.10.1"
hmac = "0.12.1"
hkdf = "0.12.4"
sha2 = "0.10.9"
getrandom = { version = "0.2", features = ["js"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
bech32 = "0.11"
async-trait = "0.1"

# Configuration
toml = "0.8"
schemars = { version = "0.8", features = ["url"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
gloo = "0.11"

# Markdown
comrak = { version = "0.38", default-features = false }

# Validation
validator = { version = "0.20", features = ["derive"] }

# Error handling
thiserror = "2"

# Encoding
hex = "0.4"
base64 = "0.22"
zeroize = { version = "1.8", features = ["derive"] }

# Testing
proptest = "1"
criterion = "0.5"
wasm-bindgen-test = "0.3"

# Solid Pod library — Phase 4 absorption (ADR-076/078). 0.4.0-alpha.3
# adds the `core` feature flag which strips tokio/reqwest/notify so the
# pure-logic surfaces (wac, webid, dotfile, nip98 verifier (structural
# checks only — Schnorr verification is the kit's nostr-bbs-core
# responsibility on wasm32 because secp256k1-sys C compilation under
# Nix has a stubs-32.h issue), ldp parsers, interop types, error type)
# compile to wasm32-unknown-unknown. `core` transitively enables
# `did-nostr-types` — the canonical DID:nostr document types consumed
# by nostr-bbs-core::did. The `mrc20` feature (MRC-20 payment types)
# is available upstream but not yet enabled in this workspace.
#
# `core` consumers (CF Workers): use this dep.
# Server-side consumers: enable `tokio-runtime` and the IO backends
# they need.
# Registry dep: 0.4.0-alpha.17 is published from git tag v0.4.0-alpha.17
# (commit 9b4076a), so registry and git are the same code — the alpha.15
# aliasing (published crate != advanced untagged HEAD) is resolved and the
# interim git+tag pin is retired per the deny.toml plan.
solid-pod-rs = { version = "0.4.0-alpha.17", default-features = false, features = ["core"] }

# Internal crates (workspace path deps; published to crates.io as 1.0.0-beta.2).
nostr-bbs-core = { path = "crates/nostr-bbs-core", version = "1.0.0-beta.2" }
nostr-bbs-config = { path = "crates/nostr-bbs-config", version = "1.0.0-beta.2" }
nostr-bbs-mesh = { path = "crates/nostr-bbs-mesh", version = "1.0.0-beta.2" }
nostr-bbs-rate-limit = { path = "crates/nostr-bbs-rate-limit", version = "1.0.0-beta.2" }

# ---------------------------------------------------------------------------
# Release profile (Sprint v9 D1) — WASM-optimized for forum-client and workers.
# opt-level "z" minimizes size at modest perf cost; LTO and single codegen
# unit yield further size reduction; `strip` drops debug symbols; `panic =
# abort` removes unwinding tables (workers/WASM cannot unwind anyway).
# ---------------------------------------------------------------------------
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
