[package]
name = "nostr-bbs-auth-worker"
version = "3.0.0-rc3"
edition = "2021"
description = "Auth Worker: WebAuthn + NIP-98 + pod provisioning (nostr-bbs)"

[lib]
crate-type = ["cdylib"]

[dependencies]
nostr-bbs-core = { workspace = true }
worker = { workspace = true, features = ["d1"] }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
chacha20poly1305 = { workspace = true }
k256 = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
