[package]
name = "nostr-bbs-auth-worker"
version = "1.0.0-beta.2"
edition = "2021"
description = "nostr-bbs community forum — auth worker"
license = "AGPL-3.0-only"
repository = "https://github.com/DreamLab-AI/nostr-rust-forum"
homepage = "https://github.com/DreamLab-AI/nostr-rust-forum"
documentation = "https://docs.rs/nostr-bbs-auth-worker"
keywords = ["nostr", "bbs", "cloudflare-workers", "webauthn", "authentication"]
categories = ["web-programming", "authentication"]
rust-version = "1.85"

[lib]
crate-type = ["cdylib"]

[dependencies]
nostr-bbs-core = { workspace = true }
worker = { workspace = true, features = ["d1"] }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
js-sys = { workspace = true }
nostr-bbs-rate-limit = { workspace = true }
wasm-bindgen = { workspace = true }
chacha20poly1305 = { workspace = true }
k256 = { workspace = true }
p256 = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
zeroize = { workspace = true }
