[package]
name = "nostr-bbs-bbs-client"
version = "1.0.0-beta.3"
edition = "2021"
description = "nostr-bbs community forum — retro ASCII/BBS terminal client (Leptos CSR/WASM)"
license = "AGPL-3.0-only"
repository = "https://github.com/DreamLab-AI/nostr-rust-forum"
keywords = ["nostr", "bbs", "ascii", "leptos", "wasm"]
categories = ["web-programming", "wasm"]
rust-version = "1.85"

# Pure logic (config/theme/menu) lives in the lib so it is unit-testable on the
# native target; `main.rs` mounts the Leptos app from it for the wasm build.
[lib]
name = "nostr_bbs_bbs_client"
path = "src/lib.rs"

[[bin]]
name = "nostr-bbs-bbs-client"
path = "src/main.rs"

[dependencies]
# Shared config schema (Branding, Zone, ZoneVisibility) — single source of truth
# with the rest of the kit so the BBS chrome is driven by the same forum.toml.
nostr-bbs-config = { workspace = true }
# Kit core: event types + verify_event_strict, did:nostr identity, and the
# agent-governance control-panel schema (PanelDefinition / ActionDef / FieldDef /
# ActionRequest+Response). The BBS renders the SAME human-in-the-loop panels the
# main client does, in ASCII — no reimplementation of the governance model.
nostr-bbs-core = { workspace = true }
# Solid pod / WebID / did:nostr URL formatting (pure `core` feature, wasm-safe) —
# powers the File Base (pod browser), User List (WebID profiles), and System Info
# screens against the same infrastructure the forum client uses.
solid-pod-rs = { workspace = true }

leptos = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Event",
    "CustomEvent",
    "EventTarget",
    "KeyboardEvent",
    "Location",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "CloseEvent",
    "ErrorEvent",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Storage",
    "MediaQueryList",
    "DomTokenList",
    # Composer image upload (F10): file pick + canvas compression.
    "File",
    "FileList",
    "Blob",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageBitmap",
    # F9 native passkey sign-in (WebAuthn PRF → derived key). navigator.credentials
    # + the credential option wrappers the ceremony casts into; the remaining
    # PublicKeyCredential*/Authenticator*/AuthenticationExtensions* bindings mirror
    # the forum client's WebAuthn surface.
    "Navigator",
    "CredentialsContainer",
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "PublicKeyCredential",
    "PublicKeyCredentialCreationOptions",
    "PublicKeyCredentialRequestOptions",
    "AuthenticatorResponse",
    "AuthenticatorAttestationResponse",
    "AuthenticatorAssertionResponse",
    "AuthenticationExtensionsClientInputs",
    "AuthenticationExtensionsClientOutputs",
] }
console_error_panic_hook = "0.1"
# Write path: reuse the kit's audited signer (PrfSigner) + key parsing. `hex`
# decodes the forum's persisted secret and generated keys; `zeroize` scrubs the
# transient key buffers; `send_wrapper` carries the non-Send `Rc<dyn Signer>`
# through Leptos context on the single-threaded wasm main thread (same pattern as
# the forum client's AuthStore).
hex = { workspace = true }
zeroize = { workspace = true }
# Composer image upload (F10): base64-encode the signed NIP-98 event and
# SHA-256 the payload for the `payload` tag — the same primitives the forum
# client's pod_client uses, built here on the shared `Signer` trait.
base64 = { workspace = true }
sha2 = { workspace = true }
send_wrapper = "0.6"
# URL parsing for authority-exact first-party (pod) checks — a bare string
# prefix cannot distinguish `pods.example.com` from `pods.example.com.evil.com`,
# and the pod ASCII fragment is injected as trusted HTML, so the pod-host match
# must compare parsed scheme/host/port, not a substring.
url = { workspace = true }
# NIP-07 signer: implements the kit's async `Signer` trait for `window.nostr`
# extension sessions (PodKey / nos2x / Alby), matching how the forum client's
# `Nip07Signer` is defined — same `async_trait(?Send)` erasure as core's PrfSigner.
async-trait = { workspace = true }
