[package]
name = "nostr-bbs-core"
version = "3.0.0-rc11"
edition = "2021"
description = "Shared Nostr protocol primitives for the nostr-bbs forum (client + workers)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DreamLab-AI/nostr-rust-forum"
homepage = "https://github.com/DreamLab-AI/nostr-rust-forum"
documentation = "https://docs.rs/nostr-bbs-core"
keywords = ["nostr", "bbs", "forum", "nip04", "nip44"]
categories = ["cryptography", "web-programming"]
rust-version = "1.85"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
nostr = { workspace = true }
k256 = { workspace = true }
chacha20poly1305 = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
bech32 = { workspace = true }
async-trait = { workspace = true }
# Canonical did:nostr types + payments (upstream).
solid-pod-rs = { workspace = true }

wasm-bindgen = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

# proptest + criterion use native-only deps (rusty-fork → wait-timeout)
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "bench_nip44"
harness = false

[[bench]]
name = "bench_keys"
harness = false

[[bench]]
name = "bench_events"
harness = false
