[package]
name = "nostr-bbs-forum-client"
version = "1.0.0-beta.2"
edition = "2021"
description = "Leptos CSR forum client for nostr-bbs deployments"
license = "AGPL-3.0-only"
repository = "https://github.com/DreamLab-AI/nostr-rust-forum"
homepage = "https://github.com/DreamLab-AI/nostr-rust-forum"
documentation = "https://docs.rs/nostr-bbs-forum-client"
keywords = ["nostr", "bbs", "leptos", "wasm", "forum"]
categories = ["web-programming", "wasm"]
rust-version = "1.85"

[[bin]]
name = "nostr-bbs-forum-client"
path = "src/main.rs"

[dependencies]
nostr-bbs-core = { workspace = true }
# `solid-pod-rs` core feature — wasm32-safe pure-logic surface. Exposes
# `did_nostr_types::{NostrPubkey, did_nostr_uri}` plus the `webid` and
# `interop` modules. Used by signup wizard + pod-browser + settings to
# avoid duplicating WebID / pod URL / NIP-05 formatting across the client.
solid-pod-rs = { workspace = true }
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
    "Window",
    "Document",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Element",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "EventTarget",
    "Location",
    "Navigator",
    "CredentialsContainer",
    "PublicKeyCredential",
    "PublicKeyCredentialCreationOptions",
    "PublicKeyCredentialRequestOptions",
    "AuthenticatorResponse",
    "AuthenticatorAttestationResponse",
    "AuthenticatorAssertionResponse",
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "AuthenticationExtensionsClientInputs",
    "AuthenticationExtensionsClientOutputs",
    "Storage",
    "HtmlDocument",
    "Headers",
    "RequestInit",
    "Request",
    "Response",
    "PageTransitionEvent",
    "DomRect",
    "MediaQueryList",
    "KeyboardEvent",
    "CssStyleDeclaration",
    "HtmlTextAreaElement",
    "HtmlIFrameElement",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "FileReader",
    "File",
    "FileList",
    "DataTransfer",
    "DragEvent",
    "Blob",
    "ScrollToOptions",
    "Event",
    "Clipboard",
    # IndexedDB (offline-first persistence)
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbIndex",
    "IdbKeyRange",
    "IdbCursorDirection",
    "DomStringList",
    # Storage quota
    "StorageManager",
    # Service worker registration
    "ServiceWorkerContainer",
    "RegistrationOptions",
    "ServiceWorkerUpdateViaCache",
    # Pointer events (swipe gestures)
    "PointerEvent",
    # NodeList (focus trap)
    "NodeList",
    # Image compression + encrypted media
    "ImageBitmap",
    "BlobPropertyBag",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    "Url",
    # /connect magic-link: strip the nsec-bearing fragment from history on mount (ADR-098)
    "History",
] }
gloo = { workspace = true }
comrak = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
k256 = { workspace = true }
send_wrapper = "0.6"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
bech32 = "0.11"
# Pure-Rust QR generator (no_std-friendly, wasm32-clean). Renders QR codes to
# SVG strings entirely in-WASM so the nsec never crosses into JS (ADR-095).
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
async-trait = { workspace = true }
uuid = { version = "1", features = ["js"] }
