[package]
name = "nostr-bbs-pod-worker"
version = "3.0.0-rc3"
edition = "2021"
description = "Pod Worker: Solid pods + R2 storage + WAC ACL (nostr-bbs)"

[lib]
crate-type = ["cdylib"]

[dependencies]
nostr-bbs-core = { workspace = true }
worker = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
js-sys = { workspace = true }
async-trait = { workspace = true }

# Phase 4 absorption (ADR-076/078): pure-logic surfaces of solid-pod-rs
# replace the hand-rolled WAC, WebID, DID, NIP-98 verifier modules.
# `core` strips tokio/reqwest/notify so the dep compiles to
# wasm32-unknown-unknown. `nip98-schnorr` keeps the BIP-340 verifier
# available for the worker's auth path.
solid-pod-rs = { workspace = true }

# proptest is native-only (rusty-fork → wait-timeout); the worker target is
# wasm32, so we gate dev-deps behind cfg(not(wasm32)) to avoid breaking
# `cargo check --target wasm32-unknown-unknown`.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = { workspace = true }
