[package]
name = "nostr-bbs-pod-worker"
version = "3.0.0-rc6"
edition = "2021"
description = "Pod Worker: Solid pods + R2 storage + WAC ACL (nostr-bbs)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DreamLab-AI/nostr-rust-forum"
homepage = "https://github.com/DreamLab-AI/nostr-rust-forum"
documentation = "https://docs.rs/nostr-bbs-pod-worker"
keywords = ["nostr", "bbs", "solid-pod", "cloudflare-workers", "storage"]
categories = ["web-programming", "data-structures"]
rust-version = "1.85"

[lib]
crate-type = ["cdylib"]

[dependencies]
nostr-bbs-core = { workspace = true }
nostr-bbs-rate-limit = { workspace = true }
worker = { workspace = true, features = ["d1"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }
bech32 = { workspace = true }
base64 = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
async-trait = { workspace = true }
getrandom = { workspace = true }

# Phase 4 absorption (ADR-076/078): pure-logic surfaces of solid-pod-rs
# replace the hand-rolled WAC, WebID, DID, NIP-98 verifier modules.
# `core` strips tokio/reqwest/notify so the dep compiles to
# wasm32-unknown-unknown. `nip98-schnorr` keeps the BIP-340 verifier
# available for the worker's auth path.
solid-pod-rs = { workspace = true }

# uuid is a transitive dep from solid-pod-rs; on wasm32-unknown-unknown it
# needs the `js` feature for randomness (getrandom → crypto.getRandomValues).
uuid = { version = "1", features = ["js"] }

# proptest is native-only (rusty-fork → wait-timeout); the worker target is
# wasm32, so we gate dev-deps behind cfg(not(wasm32)) to avoid breaking
# `cargo check --target wasm32-unknown-unknown`.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = { workspace = true }
