[package]
name = "nostr-bbs-pod-worker"
version = "1.0.0-beta.6"
publish = false           # deployable application (built from source at KIT_REF), not a crates.io dependency
edition = "2021"
description = "Pod Worker: Solid pods + R2 storage + WAC ACL (nostr-bbs)"
license = "AGPL-3.0-only"
repository = "https://github.com/DreamLab-AI/nostr-rust-forum"
homepage = "https://github.com/DreamLab-AI/nostr-rust-forum"
documentation = "https://docs.rs/nostr-bbs-pod-worker"
keywords = ["nostr", "bbs", "solid-pod", "cloudflare-workers", "storage"]
categories = ["web-programming", "data-structures"]
rust-version = "1.85"

[lib]
crate-type = ["cdylib"]

[features]
# JSS Phase 1 forward-compat alias (ADR-086, consumer-surface-map.md).
# Activates the upstream Phase 1 feature trio and unlocks the stub modules
# in `src/{key_provisioning,export,nip05_endpoint}.rs`.
solid-pod-rs-phase1 = [
    "solid-pod-rs/provision-keys",
    "solid-pod-rs/nip05-endpoint",
    "solid-pod-rs/export-jsonld",
]

[dependencies]
nostr-bbs-core = { workspace = true }
nostr-bbs-rate-limit = { workspace = true }
# Server-side image→ASCII rendering of pod image resources (decode feature pulls
# the `image` decoders). Applied as a presentation transform on resource GET,
# strictly AFTER the WAC/WebID access gate.
nostr-bbs-ascii = { workspace = true, features = ["decode"] }
worker = { workspace = true, features = ["d1"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }
bech32 = { workspace = true }
base64 = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
async-trait = { workspace = true }
getrandom = { workspace = true }
zeroize = { workspace = true }

# Phase 4 absorption (ADR-076/078): pure-logic surfaces of solid-pod-rs
# replace the hand-rolled WAC, WebID, DID, NIP-98 verifier modules.
# `core` strips tokio/reqwest/notify so the dep compiles to
# wasm32-unknown-unknown. `nip98-schnorr` keeps the BIP-340 verifier
# available for the worker's auth path.
solid-pod-rs = { workspace = true }

# uuid is a transitive dep from solid-pod-rs; on wasm32-unknown-unknown it
# needs the `js` feature for randomness (getrandom → crypto.getRandomValues).
uuid = { version = "1", features = ["js"] }

# proptest is native-only (rusty-fork → wait-timeout); the worker target is
# wasm32, so we gate dev-deps behind cfg(not(wasm32)) to avoid breaking
# `cargo check --target wasm32-unknown-unknown`.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = { workspace = true }
