[package]
name = "nostr-bbs-preview-worker"
version = "3.0.0-rc3"
edition = "2021"
description = "Link preview Worker: OG metadata + Twitter oEmbed + SSRF protection (nostr-bbs)"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = { workspace = true }
regex = "1"
