[package]
name = "nostr-bbs-rate-limit"
version = "1.0.0-beta.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared application-layer rate limiting via Cloudflare KV (nostr-bbs)"
keywords = ["nostr", "bbs", "rate-limit", "cloudflare-workers"]
categories = ["web-programming"]

[dependencies]
worker = { workspace = true, features = ["d1"] }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
async-trait = { workspace = true }
nostr-bbs-core = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
